Add Sphix documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = eo-forge
-version = 0.0.2
-author = Felix Rojo Lapalma, Andres Perez
+version = 0.1
+author = Felix Rojo Lapalma, Andrés Pérez Hortal
 description = Python tools for remote sensing data processing.
 long_description = file: README.md
 long_description_content_type = text/markdown
