--- a/setup.cfg
+++ b/setup.cfg
@@ -3,11 +3,11 @@ name = eo-forge
 version = 0.1
 author = Felix Rojo Lapalma, Andrés Pérez Hortal
 description = Python tools for remote sensing data processing.
-long_description = file: README.md
+long_description = file: README.rst
 long_description_content_type = text/markdown
 url = https://github.com/EO-Forge/eo-forge.git
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 4 - Beta
     License :: OSI Approved :: BSD License
     Programming Language :: Python :: 3
     Operating System :: OS Independent
