--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = eo-forge
-version = 0.1
+version = 0.1.1
 author = Felix Rojo Lapalma, Andrés Pérez Hortal
 description = Python tools for remote sensing data processing.
 long_description = file: README.rst
-long_description_content_type = text/markdown
+long_description_content_type = text/x-rst
 url = https://github.com/EO-Forge/eo-forge.git
 classifiers =
     Development Status :: 4 - Beta
